tests/lean/sec_notation2.lean.expected.out
5
5
sec_notation2.lean:23:21: error: invalid expression
5
sec_notation2.lean:30:13: error: invalid expression
